# agno_demo

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  example.env  pyproject.toml  requirements.txt
.github/workflows/: smoke-testing.yml  validate.yml
agents/approvals/: __init__.py  agent.py  instructions.py  tools.py
agents/chatrobot/: __init__.py  agent.py  instructions.py
agents/compressor/: __init__.py  agent.py  instructions.py
agents/contacts/: __init__.py  agent.py  instructions.py
agents/craftsman/: __init__.py  agent.py  instructions.py
agents/dash/: __init__.py  db_utils.py  instructions.py  settings.py  team.py
agents/docs/: __init__.py  agent.py  instructions.py
agents/feedback/: __init__.py  agent.py  instructions.py
agents/helpdesk/: __init__.py  agent.py  instructions.py  tools.py
agents/injector/: __init__.py  agent.py  instructions.py  tools.py
agents/mcp/: __init__.py  agent.py  instructions.py
agents/my_kb/: __init__.py  agent.py  instructions.py  seed_urls.example  seed_urls.txt  settings.py
agents/reasoner/: __init__.py  agent.py  instructions.py
app/: config.yaml  main.py  registry.py  settings.py
db/: __init__.py  deepseek_chat_embedder.py  session.py
docs/: EVALS.md  SLACK_CONNECT.md
evals/: IMPROVE.md  __init__.py  __main__.py  client.py  docker.py  improve.py  performance.py  registry.py  reliability.py  results.py  run.py  smoke.py
frameworks/: __init__.py
scripts/: build_image.sh  entrypoint.sh  railway_env.sh  railway_redeploy.sh  railway_up.sh  venv_setup.sh
utils/: exa.py
(+115 files in other folders)
